--- a/index.html
+++ b/index.html
@@ -1,138 +1,127 @@
 <!doctype html>
 <html lang="de" data-theme="auto">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>ASV Süchteln mE1 · Live</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
+  <title>ASV Handball · Live</title>
 
-  <!-- PWA/Meta -->
-  <meta name="theme-color" content="#0B1020" />
-  <link rel="manifest" href="/manifest.webmanifest" />
-  <link rel="icon" href="/assets/favicon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="/assets/icon-192-maskable.png" />
+  <!-- SEO -->
+  <meta name="description" content="ASV Handball – Live Scores, Tabelle, Spielplan. Fair. Vollgas. ASV!">
+  <meta name="theme-color" content="#0B1020"/>
+  <meta property="og:title" content="ASV Handball · Live">
+  <meta property="og:description" content="Live Scores, Tabelle, Spielplan – PWA, Offline, Dark/Light.">
+  <meta property="og:image" content="./assets/og-banner.png">
   <meta name="color-scheme" content="light dark">
 
-  <!-- Performance -->
-  <link rel="preconnect" href="https://www.google-analytics.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preload" as="style" href="/assets/styles.css" />
-  <link rel="stylesheet" href="/assets/styles.css" media="print" onload="this.media='all'">
-  <noscript><link rel="stylesheet" href="/assets/styles.css"></noscript>
+  <!-- PWA -->
+  <link rel="manifest" href="./manifest.webmanifest">
+  <link rel="icon" href="./assets/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./assets/icon.svg">
 
-  <!-- Critical CSS (kleiner Ausschnitt für Above-the-Fold) -->
+  <!-- Styles -->
+  <link rel="preload" as="style" href="../src/styles.css"/>
+  <link rel="stylesheet" href="../src/styles.css" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="../src/styles.css"></noscript>
+
+  <!-- Critical tiny CSS for fast paint -->
   <style>
-    :root{
-      --asv-blue:#0046AD;--asv-red:#E21B23;--bg:#0B1020;--bg-soft:#12182b;--fg:#E9ECF4;--muted:#9aa4bf;
-      --card:#0f1526;--shadow:0 10px 30px rgba(0,0,0,.25);--radius:16px;
-    }
-    @media (prefers-color-scheme: light){
-      html[data-theme="auto"] :root{--bg:#f6f8ff;--bg-soft:#ffffff;--fg:#0b1020;--muted:#5c6680;--card:#ffffff;}
-    }
-    html[data-theme="light"] :root{--bg:#f6f8ff;--bg-soft:#ffffff;--fg:#0b1020;--muted:#5c6680;--card:#ffffff;}
-    html,body{height:100%}
-    body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.5 system-ui,Segoe UI,Roboto,Inter,Arial,sans-serif}
-    .wrap{max-width:1100px;margin:auto;padding:16px}
-    header.app{display:flex;gap:12px;align-items:center;justify-content:space-between}
-    header .brand{display:flex;gap:12px;align-items:center}
-    header .brand .logo{width:40px;height:40px;border-radius:12px;background:
-      radial-gradient(circle at 30% 30%, #fff3, transparent 40%),
-      conic-gradient(var(--asv-blue),var(--asv-red));
-      box-shadow: var(--shadow)}
-    header .actions{display:flex;gap:8px;align-items:center}
-    .btn{border:0;border-radius:999px;padding:10px 14px;cursor:pointer;background:var(--bg-soft);color:var(--fg)}
-    .btn.primary{background:linear-gradient(135deg,var(--asv-blue),var(--asv-red));color:#fff}
-    main{display:grid;gap:16px;margin-top:12px}
-    section.card{background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);padding:16px;overflow:hidden}
-    .grid-2{display:grid;grid-template-columns:1fr;gap:16px}
-    @media (min-width:900px){.grid-2{grid-template-columns:2fr 1fr}}
-    .skeleton{position:relative;overflow:hidden;background:linear-gradient(90deg,#ffffff10,#ffffff05,#ffffff10);border-radius:12px}
-    .skeleton::after{content:"";position:absolute;inset:0;background:linear-gradient(90deg,transparent,rgba(255,255,255,.15),transparent);transform:translateX(-100%);animation:shimmer 1.2s infinite}
-    @keyframes shimmer{to{transform:translateX(100%)}}
-    .table{width:100%;border-collapse:collapse}
-    .table th,.table td{padding:10px;border-bottom:1px solid #ffffff10;text-align:left}
-    .badge{display:inline-flex;align-items:center;gap:6px;padding:3px 8px;border-radius:999px;background:#ffffff14}
-    .muted{color:var(--muted)}
-    .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
+    html,body{height:100%} body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.5 system-ui,Segoe UI,Roboto,Inter,Arial}
+    .wrap{max-width:1120px;margin:auto;padding:16px}
+    .sr-only{position:absolute;width:1px;height:1px;margin:-1px;clip:rect(0,0,0,0);overflow:hidden}
   </style>
 </head>
 <body>
-  <a class="sr-only" href="#content">Zum Inhalt springen</a>
-  <div class="wrap">
-    <header class="app" aria-label="Seitennavigation">
-      <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
-        <div>
-          <div style="font-weight:800;letter-spacing:.2px">ASV Süchteln mE1</div>
-          <div class="muted" style="font-size:.9rem">Live Scores · Tabelle · Spielplan</div>
+<a class="sr-only" href="#content">Zum Inhalt springen</a>
+<div class="wrap">
+  <header class="app" aria-label="Seitenkopf">
+    <div class="brand">
+      <img src="./assets/icon.svg" alt="" class="logo" width="40" height="40" aria-hidden="true">
+      <div class="brand-lines">
+        <strong id="brand-title">ASV Handball</strong>
+        <span class="muted" id="brand-sub">Fair. Vollgas. ASV!</span>
+      </div>
+    </div>
+    <nav class="actions" aria-label="Aktionen">
+      <button id="btn-install" class="btn" hidden>Installieren</button>
+      <button id="btn-share" class="btn" aria-label="Seite teilen">Teilen</button>
+      <button id="btn-theme" class="btn" aria-pressed="false" aria-label="Theme wechseln">🌗</button>
+    </nav>
+  </header>
+
+  <main id="content" class="grid-3" aria-live="polite">
+    <!-- Hero -->
+    <section class="card hero">
+      <div class="hero-left">
+        <h1 id="hero-title">„Volle Halle. Volle Herzen.“</h1>
+        <p class="muted" id="hero-sub">
+          Live-Scores, Tabelle & Spielplan – mit einem Hauch Konfetti.
+        </p>
+        <div class="cta-row">
+          <a href="#schedule" class="btn primary">Zum Spielplan</a>
+          <button class="btn" id="btn-cheer">🎉 Jubel!</button>
         </div>
       </div>
-      <div class="actions">
-        <button id="btn-install" class="btn" hidden>Installieren</button>
-        <button id="btn-share" class="btn" aria-label="Seite teilen">Teilen</button>
-        <button id="btn-theme" class="btn" aria-pressed="false" aria-label="Theme umschalten">🌗</button>
+      <div class="hero-right">
+        <div class="badge">Form: <strong id="form-value">–</strong></div>
+        <div class="countdown" id="countdown">–</div>
       </div>
-    </header>
+    </section>
 
-    <main id="content" class="grid-2" aria-live="polite">
-      <!-- Linke Spalte -->
-      <div class="stack" style="display:grid;gap:16px">
-        <!-- Next Game + Countdown -->
-        <section class="card" id="next-game" aria-labelledby="next-game-h">
-          <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-            <h2 id="next-game-h" style="margin:0">Nächstes Spiel</h2>
-            <span id="form-indicator" class="badge">Form: <strong id="form-value" style="font-variant-numeric:tabular-nums">–</strong></span>
-          </div>
-          <div id="next-game-body" class="skeleton" style="height:110px;margin-top:12px;border-radius:12px"></div>
-        </section>
-
-        <!-- Spielplan -->
-        <section class="card" id="schedule" aria-labelledby="schedule-h">
-          <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-            <h2 id="schedule-h" style="margin:0">Spielplan & Ergebnisse</h2>
-            <div style="display:flex;gap:8px;align-items:center">
-              <label class="badge"><input id="flt-only-asv" type="checkbox" checked> nur ASV</label>
-              <label class="badge"><input id="flt-upcoming" type="checkbox" checked> nur bevorstehend</label>
-            </div>
-          </div>
-          <div id="schedule-body" style="margin-top:8px">
-            <div class="skeleton" style="height:240px"></div>
-          </div>
-          <details id="iframe-fallback" style="margin-top:10px" hidden>
-            <summary>Fallback: Original-Ansicht laden (iFrame)</summary>
-            <iframe id="iframe-el" title="nuLiga Fallback" loading="lazy" style="width:100%;height:520px;border:0;border-radius:12px;margin-top:10px"></iframe>
-          </details>
-        </section>
+    <!-- Tabelle -->
+    <section class="card" id="table" aria-labelledby="table-h">
+      <div class="card-head">
+        <h2 id="table-h">Tabelle</h2>
+        <div class="filters">
+          <label class="badge"><input id="flt-top" type="checkbox" checked> Top-3</label>
+          <span class="badge">⏱ <time id="tbl-updated">–</time></span>
+        </div>
       </div>
+      <div id="table-body"><div class="skeleton h-240"></div></div>
+      <div class="sparkline-wrap">
+        <svg id="form-spark" viewBox="0 0 100 30" role="img" aria-label="Formkurve letzte 5 Spiele"></svg>
+      </div>
+    </section>
 
-      <!-- Rechte Spalte -->
-      <aside class="stack" style="display:grid;gap:16px">
-        <!-- Tabelle -->
-        <section class="card" id="table" aria-labelledby="table-h">
-          <div style="display:flex;align-items:center;justify-content:space-between;gap:12px;flex-wrap:wrap">
-            <h2 id="table-h" style="margin:0">Tabelle</h2>
-            <div style="display:flex;gap:8px;align-items:center">
-              <label class="badge"><input id="flt-top" type="checkbox" checked> Top-3</label>
-              <span class="badge" title="Letztes Update"><span class="muted">⏱</span><time id="tbl-updated">–</time></span>
-            </div>
-          </div>
-          <div id="table-body" style="margin-top:8px">
-            <div class="skeleton" style="height:240px"></div>
-          </div>
-        </section>
+    <!-- Spielplan -->
+    <section class="card" id="schedule" aria-labelledby="schedule-h">
+      <div class="card-head">
+        <h2 id="schedule-h">Spielplan & Ergebnisse</h2>
+        <div class="filters">
+          <label class="badge"><input id="flt-only-asv" type="checkbox" checked> nur ASV</label>
+          <label class="badge"><input id="flt-upcoming" type="checkbox" checked> bevorstehend</label>
+        </div>
+      </div>
+      <div id="schedule-body"><div class="skeleton h-240"></div></div>
+      <details id="iframe-fallback" class="mt-10" hidden>
+        <summary>Fallback: Original-Ansicht (nuLiga)</summary>
+        <iframe id="iframe-el" title="nuLiga Fallback" loading="lazy"></iframe>
+      </details>
+    </section>
 
-        <!-- Mini-Tabelle (sticky) -->
-        <section class="card" id="mini" aria-labelledby="mini-h">
-          <h3 id="mini-h" style="margin:0 0 8px 0">Mini-Tabelle</h3>
-          <div id="mini-body"><div class="skeleton" style="height:120px"></div></div>
-        </section>
-      </aside>
-    </main>
+    <!-- Team & Trainer -->
+    <section class="card" id="roster" aria-labelledby="roster-h">
+      <div class="card-head">
+        <h2 id="roster-h">Team & Trainer</h2>
+        <span class="badge">Humor inside 🤝</span>
+      </div>
+      <div id="roster-body"><div class="skeleton h-200"></div></div>
+    </section>
 
-    <footer class="muted" style="margin:18px 0;text-align:center">
-      <small>© <span id="year"></span> ASV Süchteln · PWA-Modus aktiv · <a href="#" class="muted" id="link-offline">Offline testen</a></small>
-    </footer>
-  </div>
+    <!-- News -->
+    <section class="card" id="news" aria-labelledby="news-h">
+      <div class="card-head">
+        <h2 id="news-h">Schlagzeilen</h2>
+        <span class="muted">Quelle: handball-world (RSS, sofern freigegeben)</span>
+      </div>
+      <div id="news-body"><div class="skeleton h-160"></div></div>
+    </section>
+  </main>
 
-  <script type="module" src="/scripts/app.js" defer></script>
+  <footer class="muted center">
+    <small>© <span id="year"></span> ASV Handball · PWA aktiv · <a href="./offline.html" class="muted">Offline testen</a></small>
+  </footer>
+</div>
+
+<script type="module" src="../src/app.js" defer></script>
 </body>
 </html>
