--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
     <meta name="theme-color" content="#050A16" />
-    <!-- manifest liegt in /public, daher ohne Repo-Prefix -->
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <!-- mit Repo-Prefix, damit Pages nie 404 -->
+    <link rel="manifest" href="/ASV-mE1/manifest.webmanifest" />
     <title>ASV Süchteln mE1 · Live</title>
     <link rel="preconnect" href="https://srs-handball.de">
     <link rel="dns-prefetch" href="https://srs-handball.de">
   </head>
   <body>
     <div id="root"></div>
-    <!-- WICHTIG: Vite-Entry immer /src/main.tsx -->
+    <!-- Dev-Entry; Vite ersetzt das beim Build durch /ASV-mE1/assets/*.js -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+
 
 
