--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!doctype html>
 <html lang="de">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-    <meta name="theme-color" content="#050A16" />
-    <!-- mit Repo-Prefix, damit Pages nie 404 -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#0b1220" />
+    <title>ASV Süchteln • mE1 • Live</title>
+
+    <link rel="icon" href="/ASV-mE1/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/ASV-mE1/logo.svg" />
     <link rel="manifest" href="/ASV-mE1/manifest.webmanifest" />
-    <title>ASV Süchteln mE1 · Live</title>
-    <link rel="preconnect" href="https://srs-handball.de">
-    <link rel="dns-prefetch" href="https://srs-handball.de">
+
+    <!-- performante, systemnahe Typo -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <script type="module" src="/ASV-mE1/src/main.tsx"></script>
   </head>
   <body>
     <div id="root"></div>
-    <!-- Dev-Entry; Vite ersetzt das beim Build durch /ASV-mE1/assets/*.js -->
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
-
-
-
-
