--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0b1220" />
-    <title>ASV Süchteln • mE1 • Live</title>
+    <meta name="theme-color" content="#0046AD" />
+    <title>ASV Süchteln mE1</title>
 
-    <link rel="icon" href="/ASV-mE1/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="/ASV-mE1/logo.svg" />
-    <link rel="manifest" href="/ASV-mE1/manifest.webmanifest" />
-
-    <!-- performante, systemnahe Typo -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
-    <script type="module" src="/ASV-mE1/src/main.tsx"></script>
+    <!-- Icons & Manifest: IMMER mit %BASE_URL%, damit GitHub Pages (Unterordner) klappt -->
+    <link rel="icon" href="%BASE_URL%favicon.svg" type="image/svg+xml" />
+    <link rel="alternate icon" href="%BASE_URL%favicon.ico" />
+    <link rel="apple-touch-icon" href="%BASE_URL%icon-192.png" />
+    <link rel="manifest" href="%BASE_URL%manifest.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- WICHTIG: NIE /ASV-mE1/ hier! Vite braucht den reinen Projekt-Entry -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+
