--- a/index.html
+++ b/index.html
@@ -2,22 +2,16 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0046AD" />
-    <title>ASV Süchteln mE1</title>
-
-    <!-- Icons & Manifest: IMMER mit %BASE_URL%, damit GitHub Pages (Unterordner) klappt -->
-    <link rel="icon" href="%BASE_URL%favicon.svg" type="image/svg+xml" />
-    <link rel="alternate icon" href="%BASE_URL%favicon.ico" />
-    <link rel="apple-touch-icon" href="%BASE_URL%icon-192.png" />
-    <link rel="manifest" href="%BASE_URL%manifest.webmanifest" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#0b1220" />
+    <title>ASV mE1</title>
   </head>
   <body>
     <div id="root"></div>
-
-    <!-- WICHTIG: NIE /ASV-mE1/ hier! Vite braucht den reinen Projekt-Entry -->
+    <!-- Richtig: /src/main.tsx (ohne /ASV-mE1 davor) -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
 
 
